# TimeWeaveRS

./: Cargo.toml
gallery/: Cargo.toml  build.rs  gallery.slint
gallery/src/: lib.rs  main.rs
gallery/ui/: side_bar.slint
gallery/ui/pages/: controls_page.slint
src/: egui_example.rs
src/ui/: example.slint
